syntax = "proto3";

package grpc_custom.graphql;

option go_package = "github.com/grpc-custom/graphql-gateway/proto;graphql";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
  Schema schema = 88916;
}

extend google.protobuf.FieldOptions {
  Field field = 88916;
}

extend google.protobuf.MessageOptions {
  Object object = 88916;
}

message CacheControl {
  string max_age = 1;
}

message Schema {
  oneof type {
    string query     = 1;
    string mutation  = 2;
    string subscribe = 3;
    string extend    = 4;
  }
  string       description   = 6;
  CacheControl cache_control = 7;
  string       field         = 8;
}

message Field {
  bool   nullable    = 1;
  string description = 2;
  oneof default {
    string default_string = 3;
    int32  default_number = 4;
    bool   default_bool   = 5;
  }
  bool inline     = 6;
  string name     = 7;
  bool   exclude  = 8;
  string external = 9;
}

message Object {
  string typename             = 1;
  repeated string key         = 2;
  string          description = 3;
}
